--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import './bootstrap/carousel';
 @import './components/containers';
 @import './components/multimedia';
+@import './components/carousel-custom';
 @import './bootstrap/offcanvascart';
 @import './layout/body';
 @import './layout/footer';
