--- a/scss/bootstrap/_cards.scss
+++ b/scss/bootstrap/_cards.scss
@@ -11,11 +11,17 @@
     .card-body {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 3rem 1.875rem 2.6875rem;
+        grid-template-rows: 1rem 3rem 1.875rem 2.6875rem;
         gap: 0.5rem;
         justify-content: center;
         align-content: center;
         place-items: center;
+    }
+
+    .card-manu {
+        text-transform: uppercase;
+        font-size: 0.95rem;
+        font-family: var(--font-tertiary);
     }
 
     .card-title {
@@ -26,6 +32,12 @@
     .card-text {
         font-size: 1.3rem;
         font-weight: 600;
+        color: var(--color-green);
+        &--orig-price {
+            margin-left: 1rem;
+            text-decoration:line-through;
+            color: var(--color-font-primary);
+        }
     }
 
     &:hover {
