--- a/scss/layout/_404.scss
+++ b/scss/layout/_404.scss
@@ -42,7 +42,7 @@
 
     &__text {
         grid-area: text;
-        font-family: var(--font-secondary);
+        font-family: var(--color-font-secondary);
         font-size: 2rem;
         margin: 3rem 0;
         font-weight: 300;
