--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -157,5 +157,9 @@
             }
         }
     }
+}
 
+// GRADIENTE CUSTOM CAROUSEL
+@mixin white-gradient {
+	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
 }
