--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -42,7 +42,8 @@
 
 .section-pay {
     @extend .section-about;
-
+    display: flex;
+    flex-direction: column;
     &__desc-pay {
         display: flex;
         justify-content: space-evenly;
