--- a/scss/components/_carousel-custom.scss
+++ b/scss/components/_carousel-custom.scss
@@ -5,22 +5,23 @@ $animationSpeed: 40s;
 .slider {
 	background: white;
 	box-shadow: 0 10px 20px -5px var(--color-shadow);
-	height: 6.2rem;
+	height: 5rem;
 	margin: auto;
-	overflow:hidden;
+	overflow: hidden;
 	position: relative;
 	width: 100%;
-	
+	opacity: 0.7;
+
 	&::before,
 	&::after {
 		@include white-gradient;
 		content: "";
-		height: 6.2rem;
+		height: 5rem;
 		position: absolute;
 		width: 12.5rem;
 		z-index: 2;
 	}
-	
+
 	&::after {
 		right: 0;
 		top: 0;
@@ -31,21 +32,21 @@ $animationSpeed: 40s;
 		left: 0;
 		top: 0;
 	}
-	
+
 	.slide-track {
 		animation: scroll $animationSpeed linear infinite;
 		display: flex;
 		width: calc(15.6rem * 14);
 	}
-	
+
 	.slide {
-        display: flex;
-        align-items: center;
-		height: 6.2rem;
+		display: flex;
+		align-items: center;
+		height: 5rem;
 		width: 15.6rem;
-        &__img{
-            height: 6.2rem;
-            width: 15.6rem;
-        }
-    }
+
+		&__img {
+			height: 5rem;
+		}
+	}
 }
